<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.actionbartest.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText"/>
    
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:orderInCategory="2"
          android:title="@string/action_search"
          android:showAsAction="ifRoom|withText"/>
    	  
    <!-- Show Phonebook -->
    <item android:id="@+id/action_phonebook"
          android:icon="@drawable/ic_launcher"
          android:orderInCategory="100"
          android:title="@string/phonebook"
          android:showAsAction="ifRoom|withText"/>
</menu>
